moving EE test code into it's own module